Nautilus icon view broken in Windoze UI and Ambiance on Gnome-Shell. Fixes #345.

--- a/usr/share/css/themes/ambiance/scrollpane.css
+++ b/usr/share/css/themes/ambiance/scrollpane.css
@@ -8,12 +8,13 @@
 	overflow: auto;
 }
 .webos-scrollpane.scrollpane-natural .pane-natural {
+	position: relative;
 	min-width: 100%;
 	min-height: 100%;
 }
-.webos-window .content > .webos-scrollpane.scrollpane-natural {
+/*.webos-window .content > .webos-scrollpane.scrollpane-natural {
 	overflow: visible;
-}
+}*/
 
 .webos-scrollpane .pane {
 	position: absolute;
